--- a/assets/custom-theme.scss
+++ b/assets/custom-theme.scss
@@ -1,8 +1,8 @@
 @import "reveal-js/dist/theme/template/mixins";
 @import "reveal-js/dist/theme/template/settings";
 
-
 // Include theme-specific fonts
+
 
 // Sans-serif
 // @import url('reveal-js/lib/font/source-sans-pro/source-sans-pro.css');
@@ -27,10 +27,10 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono');
 // @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono');
 
-// $backgroundColor: #fff;
+$backgroundColor: #EFF1ED;
 
-// $mainColor: #000;
-// $headingColor: #111;
+$mainColor: #222;
+$headingColor: #222;
 
 $mainFontSize: 2em;
 // $mainFont: 'Roboto', sans-serif;
@@ -62,11 +62,14 @@ $heading4Size: 1.0em;
 section.has-light-background {
 	$detailBackgroundColor: #bd2b0b !global;
 	$logo: url("../example-background.svg") !global;
-
-	&, h1, h2, h3, h4, h5, h6 {
-		color: #222;
+	&, h1, h3, h4, h5, h6 {
+		color: #095aa6;
+	}
+	h2 {
+		color: #4999e4;
 	}
 }
+
 .reveal pre {
 	margin: 1em auto;
 }
@@ -77,9 +80,9 @@ section.has-light-background {
 	color: #b81f0b
 }
 
+
 .reveal em {
 	font-style: italic;
-	color: #039418
 }
 
 .reveal section img {
@@ -92,42 +95,24 @@ section.has-light-background {
 }
 
 .reveal code {
-	color: rgb(209, 28, 124);
+	//color: rgb(209, 28, 124);
 	font-family: "JetBrains Mono", "Oxygen Mono", "Roboto Mono", "Ubuntu Mono", "Courier New", Courier, monospace;
-	font-weight: bold;
+	font-weight: normal;
+	line-height: normal;
+	font-size: larger;
 }
 
 .reveal pre code {
 	color: black;
-}
-
-// HEADERS
-
-.reveal h1 {
-	text-transform: none;
-}
-
-.reveal h2 {
-	text-transform: none;
+	background-color: #ffffff;
 }
 
 .reveal h3 {
-	text-transform: none;
 	margin: .5em 0 0;
 }
 
-.reveal h4 {
-	text-transform: none;
-}
-
-// LISTS
-
 .reveal ul {
 	margin: .2em .2em .2em;
-}
-
-.reveal li li {
-	font-size: 80%;
 }
 
 .gist-it-gist .gist-file .gist-data pre, .gister-gist .gist-file .gist-data pre {
@@ -144,11 +129,11 @@ section.has-light-background {
 	font-size: 1.2em;
 	color: #333333;
 	padding:0.1em 0.1em 0.1em 0.1em;
-	border-color: #039418;
+	border-color: #AD2624;
 	border-style: solid;
 	border-width: 0.1em;
 	border-radius: 1em;
-	border-left:0.7em solid #039418 ;
+	border-left:0.7em solid #AD2624 ;
 	line-height: 1.2em;
 	position: relative;
 	background:#EDEDED;
@@ -158,7 +143,7 @@ section.has-light-background {
 .reveal blockquote::before{
 	font-family:Arial;
 	content: "\201C";
-	color:#039418;
+	color: rgba(255, 255, 255, 0);
 	font-size: 4em;
 	position: absolute;
 	left: 0.05em;
@@ -173,7 +158,7 @@ section.has-light-background {
 .reveal blockquote::after{
 	font-family:Arial;
 	content: "\201D";
-	color:#039418;
+	color: rgba(255, 255, 255, 0);
 	font-size: 4em;
 	position: absolute;
 	bottom: -0.2em;
@@ -232,8 +217,28 @@ kbd {
   font-weight: normal;
 }
 
+.multiCol {
+	display: flex;
+	align-items: center;
+	vertical-align: baseline;
+	text-align: left;
+	width: 100%;
+}
+
+.col-25 {
+	width: 25%;
+}
+
+.col-50 {
+	width: 50%;
+}
+
+.col-75 {
+	width: 75%;
+}
+
 .green {
-	color: rgb(0, 255, 0);
+	color: green;
 }
 
 .red {
@@ -253,6 +258,10 @@ kbd {
 	justify-content: center;
 }
 
+.reveal .nohighlight {
+	max-height: 100vh;
+}
+
 .reveal .slide-background {
 	background-color: $backgroundColor;
 	background-image: $logo;
@@ -260,31 +269,28 @@ kbd {
 	background-position: 0.45% 99.2%;
 	background-size: 15%;
 	background-clip: border-box;
-	border-radius: 30px;
-	border-style: solid;
-	border-color: $detailBackgroundColor;
-	border-width: 0.3em;
+	border-radius: 30px 30x;
+	border-style: hidden;
+	border-width: 0.3em 0.3em;
 }
 
 .reveal .slide-background:after {
-	content: "Authors - Title - Venue Year";
+	content: "Cortecchia et. al - An Aggregate Vascular Morphogenesis Controller for Engingeered Self-Organising Spatial Structures - ACSOS 2024";
 	position: absolute;
 	bottom: 2.5%;
 	right: 6%;
 	z-index: -1;
-	color: $detailBackgroundColor;
-	font-size: .8em;
-  }
+	color: $linkColor;
+	font-size: .4em;
+  }	
 
-
-  // Multicolumn styling
 
   .reveal div.col {
 	// draw a red border
 	// border: 1px solid red;
 	text-align: left;
-	border: .2em dashed $detailBackgroundColor;
-	border-style: double;
+	border: .02em dashed $detailBackgroundColor;
+	border-style: none;
 	border-radius: 1em;
 	padding: 0.5em;
 }
@@ -292,65 +298,66 @@ kbd {
 .reveal div.container {
 	// border: 1px solid red;
 	align-self: center;
-	min-width: 90%;
-	margin-right: 5%;
-	margin-left: 5%;
+	min-width: 80%;
+	margin-right: 10%!important;
+	margin-left: 10%!important;
 	margin-top: 1em;
 }
 
+// BLUR
+
 @-webkit-keyframes blur-animation {
-  0% {
-    -webkit-filter: blur(0px) ;
-    -moz-filter: blur(0px);
-    -o-filter: blur(0px);
-    -ms-filter: blur(0px);
-    filter: blur(0px);
+	0% {
+	  -webkit-filter: blur(0px) ;
+	  -moz-filter: blur(0px);
+	  -o-filter: blur(0px);
+	  -ms-filter: blur(0px);
+	  filter: blur(0px);
 
+	}
+	100% {
+	  -webkit-filter: blur(4px) saturate(.5) brightness(.8);
+	  -moz-filter: blur(5px) saturate(.7) brightness(.9);
+	  -o-filter: blur(5px) saturate(.7) brightness(.9);
+	  -ms-filter: blur(5px)saturate(.7) brightness(.9);
+	  filter: blur(6px) saturate(1) brightness(.2);
+	}
   }
-  100% {
-    -webkit-filter: blur(4px) saturate(.5) brightness(.8);
-    -moz-filter: blur(5px) saturate(.7) brightness(.9);
-    -o-filter: blur(5px) saturate(.7) brightness(.9);
-    -ms-filter: blur(5px)saturate(.7) brightness(.9);
-    filter: blur(6px) saturate(1) brightness(.2);
+
+  html.blur-animation .backgrounds {
+	 -webkit-animation-name: blur-animation;
+	 -webkit-animation-duration: 1s;
+	 -webkit-animation-iteration-count: 1;
+	 -webkit-animation-direction: alternate;
+	 -webkit-animation-timing-function: ease-out;
+	 -webkit-animation-fill-mode: forwards;
+	 -webkit-animation-delay: 0s;
+   }
+
+   @-webkit-keyframes blur-animation-light {
+	0% {
+	  -webkit-filter: blur(0px) ;
+	  -moz-filter: blur(0px);
+	  -o-filter: blur(0px);
+	  -ms-filter: blur(0px);
+	  filter: blur(0px);
+
+	}
+	100% {
+	  -webkit-filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
+	  -moz-filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
+	  -o-filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
+	  -ms-filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
+	  filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
+	}
   }
-}
 
-html.blur-animation .backgrounds {
-   -webkit-animation-name: blur-animation;
-   -webkit-animation-duration: 1s;
-   -webkit-animation-iteration-count: 1;
-   -webkit-animation-direction: alternate;
-   -webkit-animation-timing-function: ease-out;
-   -webkit-animation-fill-mode: forwards;
-   -webkit-animation-delay: 0s;
- }
-
- @-webkit-keyframes blur-animation-light {
-  0% {
-    -webkit-filter: blur(0px) ;
-    -moz-filter: blur(0px);
-    -o-filter: blur(0px);
-    -ms-filter: blur(0px);
-    filter: blur(0px);
-
-  }
-  100% {
-    -webkit-filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
-    -moz-filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
-    -o-filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
-    -ms-filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
-    filter: blur(6px) contrast(0.5) saturate(3) brightness(2) contrast(0.5) brightness(1.3) ;
-  }
-}
-
-html.blur-animation-light .backgrounds {
-	color: #039418;
-   -webkit-animation-name: blur-animation-light;
-   -webkit-animation-duration: 1s;
-   -webkit-animation-iteration-count: 1;
-   -webkit-animation-direction: alternate;
-   -webkit-animation-timing-function: ease-out;
-   -webkit-animation-fill-mode: forwards;
-   -webkit-animation-delay: 0s;
- }
+  html.blur-animation-light .backgrounds {
+	 -webkit-animation-name: blur-animation-light;
+	 -webkit-animation-duration: 1s;
+	 -webkit-animation-iteration-count: 1;
+	 -webkit-animation-direction: alternate;
+	 -webkit-animation-timing-function: ease-out;
+	 -webkit-animation-fill-mode: forwards;
+	 -webkit-animation-delay: 0s;
+   }
