--- a/assets/custom-theme.scss
+++ b/assets/custom-theme.scss
@@ -98,7 +98,7 @@ section.has-light-background {
 }
 
 .reveal code {
-	//color: rgb(209, 28, 124);
+	color: #095aa6;
 	font-family: "JetBrains Mono", "Oxygen Mono", "Roboto Mono", "Ubuntu Mono", "Courier New", Courier, monospace;
 	font-weight: normal;
 	line-height: normal;
